Bugfix/UI: Workaround for number inputs overflowing their widgets in Firefox

--- a/public/stylesheets/widgets.css
+++ b/public/stylesheets/widgets.css
@@ -435,6 +435,7 @@
 .netlogo-multiline-input {
   flex-grow: 1;
   height:    0; /* This is a hack to get Input widget labels the right heights in Firefox --JAB (11/23/17) */
+  width:     auto; /* This is a hack to get input type="number" widgets sized correctly in Firefox -JMB Jan 2018 */
   margin:    4px;
   resize:    none;
 }
